# Full-stack-Todo-app

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_URDU.md  README.md
.specify/memory/: constitution.md
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/alembic/: README  env.py
backend/alembic/versions/: 18e5dd6892c8_initial_schema_with_user_and_task_tables.py
backend/src/: __init__.py  main.py
backend/src/api/: dependencies.py
backend/src/api/middleware/: error_handler.py
backend/src/api/routes/: auth.py  tasks.py
backend/src/core/: config.py  database.py  security.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/services/: auth_service.py  task_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthGuard.tsx  LogoutButton.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  types.ts
history/prompts/001-todo-fullstack-app/: 001-create-todo-app-specification.spec.prompt.md  002-create-system-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-phase-1-setup-implementation.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-setup.constitution.prompt.md
specs/001-todo-fullstack-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-fullstack-app/checklists/: requirements.md
specs/001-todo-fullstack-app/contracts/: auth-api.md  database-schema.md  tasks-api.md
(+2 files in other folders)
